fixing form, aligning everything left

--- a/src/sass/app/websocket_pages.scss
+++ b/src/sass/app/websocket_pages.scss
@@ -92,21 +92,48 @@
 }
 
 #financial-form {
+    #lbl_residence {
+        text-align: left;
+        margin-left: 0.5rem;
+    }
+    #date_of_birth {
+        margin: 0;
+        text-indent: 0;
+    }
+    input:not([type=checkbox]), .select-dropdown, #citizen {
+        width: 260px;
+    }
+    #citizen, #address_postcode {
+        box-sizing: unset;
+        -webkit-box-sizing: unset;
+
+    }
+
     @media screen and (max-width: 480px) {
-        div.select {
-            width: calc(100% - 3rem);
+        select, div.select {
+            width: 100%;
+            height: 2rem;
         }
-        #citizen, div.select + span {
-            width: calc(100% - 3rem);
+        div.select:after {
+            top: 12px;
         }
-        .select2-container {
-            width: calc(100% - 3rem) !important;
+        input:not([type=checkbox]) {
+            width: calc(100% - 1.2rem);
+            height: 1.5rem;
+            text-align: left;
         }
         #source_of_wealth {
             min-width: 0;
         }
-        #secret_answer {
-            text-align: center;
+        .select2-container {
+            width: 100% !important;
+        }
+        .select2-selection {
+            text-align: left;
+        }
+        #citizen, div.select + span {
+            width: 100%;
+            height: 1.9rem;
         }
     }
 }
